// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-2322.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export const listAuthorizedSitesForDefaultHandler: ListAuthorizedSitesForHandler = aListAuthorizedSitesForResponse;

=====================================output=====================================
export const listAuthorizedSitesForDefaultHandler: ListAuthorizedSitesForHandler =
  aListAuthorizedSitesForResponse;

================================================================================
`;

exports[`issue-2485.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class x {
  private readonly rawConfigFromFile$: BehaviorSubject<
    any
  > = new BehaviorSubject(notRead);
}

=====================================output=====================================
class x {
  private readonly rawConfigFromFile$: BehaviorSubject<any> =
    new BehaviorSubject(notRead);
}

================================================================================
`;

exports[`issue-3122.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export const findByDate: Resolver<void, Recipe[], { date: Date }> =
  (_, { date }, { req } ) => {
    const repo = req.getRepository(Recipe);
    return repo.find({ createDate: date });
  }

export const findByDate: Resolver<void, Recipe[], { date: Date }> =
  (_, { date }, { req } ) => Recipe.find({ createDate: date });

=====================================output=====================================
export const findByDate: Resolver<void, Recipe[], { date: Date }> = (
  _,
  { date },
  { req }
) => {
  const repo = req.getRepository(Recipe);
  return repo.find({ createDate: date });
};

export const findByDate: Resolver<void, Recipe[], { date: Date }> = (
  _,
  { date },
  { req }
) => Recipe.find({ createDate: date });

================================================================================
`;

exports[`issue-5370.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const durabilityMetricsSelectable: Immutable.OrderedSet<
  SomeReportingMetric,
> = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);

=====================================output=====================================
const durabilityMetricsSelectable: Immutable.OrderedSet<SomeReportingMetric> =
  myExperienceSelectable.concat(otherDurabilityMetricsSelectable);

================================================================================
`;

exports[`issue-6783.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export const enviromentProdValues: EnvironmentValues = assign<EnvironmentValues>(
  {
    apiURL: '/api',
  },
  enviromentBaseValues
);

=====================================output=====================================
export const enviromentProdValues: EnvironmentValues =
  assign<EnvironmentValues>(
    {
      apiURL: "/api",
    },
    enviromentBaseValues
  );

================================================================================
`;
